--- a/M4. Animació CSS/Exercici 1-2/styles.css
+++ b/M4. Animació CSS/Exercici 1-2/styles.css
@@ -14,7 +14,7 @@ h1 {
     height: 680px;
 }
 
-/* BALL CONTAINER */
+/* Ball container */
 .displace {
     width: 150px;
     height: 89%;
@@ -59,6 +59,7 @@ h1 {
     z-index: -1;
 }
 
+/* Ball bounce movement */
 @keyframes bounce {
     0% {
         left: 0px;
@@ -81,11 +82,10 @@ h1 {
     }
 }
 
-/* BALL CONTAINER ANIM */
+/* Ball container movement */
 @keyframes displace {
     0% {
         left: 47%;
-        /* top: 100px; */
     }
 
     50% {
@@ -97,6 +97,7 @@ h1 {
     }
 }
 
+/* Shadow movement */
 @keyframes shadow {
     0% {
         left: 47%;
@@ -106,14 +107,12 @@ h1 {
     }
 
     57% {
-        /* left: 0; */
         width: 50px;
         height: 12px;
         background: radial-gradient(50% 50%, #000 0%, #fff 100%);
     }
 
     99% {
-        /* left: 0; */
         width: 50px;
         height: 12px;
         background: radial-gradient(50% 50%, #000 0%, #fff 100%);
