--- a/M5. SASS/Exercici 2-3/sass/_layout.scss
+++ b/M5. SASS/Exercici 2-3/sass/_layout.scss
@@ -47,8 +47,8 @@
 }
 
 // variables used to increment the values
-$i: 1;
-$j: 0.5;
+// $i: 1;
+// $j: 0.5;
 // Version with @each
 // @each $key, $value in $colorList {
 //     .strip:nth-child(#{$i}) .strip_content {
