--- a/M5. SASS/Exercici 2-3/sass/_base.scss
+++ b/M5. SASS/Exercici 2-3/sass/_base.scss
@@ -20,7 +20,7 @@ $colorList: (
     color2: #244f75,
     color3: #8c4b7e,
     color4: #f8bb44,
-    color5: #f24b4b
+    color5: #f24b4b,
 );
 
 // VARIABLES/Time transitions
@@ -29,7 +29,16 @@ $time: (
     t2: 0.8s,
     t3: 0.7s,
     t4: 1s,
-    t5: 1.1s
+    t5: 1.1s,
+);
+
+// VARIABLES/Keyframes
+$keyFramsSet: (
+    translate3d(-100%, 0, 0),
+    translate3d(0, 100%, 0),
+    translate3d(0, -100%, 0),
+    translate3d(0, 100%, 0),
+    translate3d(100%, 0, 0)
 );
 
 // MIXINS
