--- a/M7. Javascript/Exercici de Rating/style.css
+++ b/M7. Javascript/Exercici de Rating/style.css
@@ -1,4 +1,4 @@
-@import url(//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
+@import url(https://stackpath.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css);
 
 html,
 body {
@@ -7,9 +7,15 @@ body {
 
 .container {
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 /* Rating symbol */
@@ -40,3 +46,4 @@ body {
 .rating > input:checked ~ label:hover ~ label {
     color: #cc0000a5;
 }
+
