--- a/M7.1. TypeScript/Exercici de vehicles/Nivell 1-2/views/index.html
+++ b/M7.1. TypeScript/Exercici de vehicles/Nivell 1-2/views/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <section class="container">
-        <h1>Ejercicio Vehículos - Nivel 1</h1>
+        <h1>Ejercicio Vehículos - Nivel 1-2</h1>
 
         <!-- CARS -->
         <form class="form form-car" id="form-car">
